2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.h:
	* AppController.m:
	* DiffWindowController.m:
	* Resources/main.gorm:
	Add support for other version control systems besides CVS.
	Currently, this includes subversion, git, mercurial and darcs.

2012-08-10 Riccardo Mottola <rm@gnu.org>

	* DiffWrapper.m:
	Rewrite code to work with multi-char line endings.

2012-08-09 Riccardo Mottola <rm@gnu.org>

	* DiffWrapper.m:
	Clean up unsigned transition.

2012-08-08 Riccardo Mottola <rm@gnu.org>

	* FileIconView.h:
	use extern instead of APPKIT_EXPORT

2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* DiffWrapper.m
	switch unsigned ints to NSUInteger to prevent compilation warning

2012-08-06 Riccardo Mottola <rm@gnu.org>

	* DiffFileChooser.h
	* DiffFileChooser.m
	Setters for left and right filenames.

	* AppController.h
	* Resources/main.gorm
	* AppController.m
	Expose openFiles delegate and if two filenames are supplied,
	automatically open the file chooser with the filenames set.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Resources/main.gorm: Rearrange main menu, add standard edit menu
	items, and add Services menu.

	* DiffTextView.m (-initWithFrame:): Make view selectable.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.h:
	* AppController.m:
	* DiffFileChooser.h:
	* DiffFileChooser.m:
	* FileIconView.h:
	* FileIconView.m:
	* Resources/main.gorm:
	* EasyDiff.pcproj/PC.project:
	* GNUmakefile:
	Present a dialog upon selecting the Compare Files menu command
	where the user can choose the files to compare.

	* AUTHORS:
	* EasyDiff.pcproc/PC.project:
	* EasyDiffInfo.plist:
	Update list of authors.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EasyDiff.pcproj:
	* PC.project:
	* GNUmakefile:
	* GNUmakefile.preamble:
	* EasyDiffInfo.plist:
	Upgrade project and support files to latest PC version.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
